--- a/public_html/symfony/templates/base.back.html.twig
+++ b/public_html/symfony/templates/base.back.html.twig
@@ -6,17 +6,19 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            {{ encore_entry_link_tags('app.back') }}
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            {{ encore_entry_script_tags('app.back') }}
         {% endblock %}
     </head>
-    <body class="">
+    <body class="" {{ stimulus_controller('1') }}>
         {% include 'flash/flash.html.twig' %}
         {% include 'translation/translation.html.twig' %}
+        {% block header %}{% endblock %}
         {% block body %}{% endblock %}
+        {% block footer %}{% endblock %}
     </body>
 </html>
 
