--- a/public_html/symfony/templates/security/register.html.twig
+++ b/public_html/symfony/templates/security/register.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.front.html.twig' %}
 {% trans_default_domain 'register' %}
 {% block title %}{% trans %}Register{% endtrans %}{% endblock %}
 
