--- a/public_html/symfony/templates/translation/translation.html.twig
+++ b/public_html/symfony/templates/translation/translation.html.twig
@@ -1,4 +1,4 @@
-<div {{ stimulus_controller('locale') }} data-url="{{ path('app_locale') }}" class="">
-    <li><a href="#" {{ stimulus_action('locale','changeLocale') }} data-locale="en">en</a></li>
-    <li class=""><a href="#" {{ stimulus_action('locale','changeLocale') }} data-locale="el">el</a></li>
+<div {{ stimulus_controller('locale') }} data-url="{{ path('app_locale') }}">
+    <a href="#" {{ stimulus_action('locale','changeLocale') }} data-locale="en">en</a>
+    <a href="#" {{ stimulus_action('locale','changeLocale') }} data-locale="el">el</a>
 </div>
